--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ body, html {
 .footer {
 	width: 100%;
 	height: 50px;
-	display: flex;
+	display: none;
 	justify-content: center;
 	align-items: center;
 	background-color: black;
