--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,21 @@ html {
 	text-decoration: none;
 }
 
+/* animated start button with random text */
+.start-button {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: black;
+	color: white;
+	font-size: 4rem;
+	font-weight: bold;
+	animation: rainbow-text 6s ease infinite;
+	cursor: hand;
+}
+
 /* #time element rainbow text animation */
 #time {
 	animation: rainbow-text 6s ease infinite;
@@ -130,44 +145,5 @@ html {
 	}
 	100% {
 		background-color: #f00;
-	}
-}
-
-/* animated start button with random text */
-.start-button {
-	width: 100%;
-	height: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-color: black;
-	color: white;
-	font-size: 4rem;
-	font-weight: bold;
-	animation: start-button 6s ease infinite;
-	cursor: hand;
-}
-
-@keyframes start-button {
-	0% {
-		color: #f00;
-	}
-	16.6% {
-		color: #ff0;
-	}
-	33.2% {
-		color: #0f0;
-	}
-	49.8% {
-		color: #0ff;
-	}
-	66.4% {
-		color: #00f;
-	}
-	83.0% {
-		color: #f0f;
-	}
-	100% {
-		color: #f00;
 	}
 }
